feature(index.html): add viewport to fit responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Cloudstack UI</title>
     <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/custom.css" />
